{
    "name": "Controls",
    "maps": [
        {
            "name": "Touch",
            "id": "356cae54-a93b-4cb6-b868-87049c7c6bc6",
            "actions": [
                {
                    "name": "PrimaryFingerPosition",
                    "type": "Value",
                    "id": "75d326b2-6db3-4ee5-9f40-1dc35137aeb1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondaryFingerPosition",
                    "type": "Value",
                    "id": "7c74bc33-8454-4492-afe1-c3d9966071d0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondaryTouchContact",
                    "type": "PassThrough",
                    "id": "6f070fe6-a40b-42d1-b520-df1935e1f28c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Touch0Delta",
                    "type": "Value",
                    "id": "363ec954-48c7-4a5a-bee3-2049b87cf38b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Touch0Down",
                    "type": "Button",
                    "id": "0c9e9a43-15f6-4054-9671-ae39c7cf776b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Touch0Touch",
                    "type": "Value",
                    "id": "26a7bc34-16bc-4dea-b7aa-984961379023",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchCount",
                    "type": "Value",
                    "id": "d5f5bcad-957d-47bd-a7c1-05612f977b0e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e91c934b-dc84-4bcb-b82d-f7123be37ec3",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eed1ca25-84a1-43b3-bfbc-bd92cd30c25a",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97081cbb-e34b-4d99-81f0-8b145476da66",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "418d3eb8-278a-4eb3-bbe9-ef1a726756d1",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "ScaleVector2(x=0.05,y=0.05),StickDeadzone",
                    "groups": "",
                    "action": "Touch0Delta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0739a55a-1bc0-4140-af59-904ffa4b1835",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch0Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c8091a7-7fbd-4ed2-b244-04906c714660",
                    "path": "<Touchscreen>/primaryTouch/tapCount",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchCount",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19528b69-4e88-4db9-a09f-49dca3074786",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch0Touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Mouse",
            "id": "a4c30f31-ea0f-4088-b370-38ea61031a80",
            "actions": [
                {
                    "name": "Whell",
                    "type": "PassThrough",
                    "id": "18b4c3f0-5d20-4aa0-8c91-2c5c7d202997",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Mouse0Delta",
                    "type": "Value",
                    "id": "0482705a-01ec-48fa-89e8-676c685825e1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Mouse0Down",
                    "type": "Button",
                    "id": "020c1372-2274-4145-aa02-870251f31f62",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Mouse0DownPos",
                    "type": "Value",
                    "id": "0062d472-a7b3-488a-9776-1260c4a98c2a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "WheelDown",
                    "type": "Button",
                    "id": "c7fc7c21-34aa-44d5-96e6-1186c22dd97c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5812028c-8a4a-475c-9eac-3ecf64dd01e4",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "Clamp(min=-1,max=1)",
                    "groups": "",
                    "action": "Whell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "621bd338-7c75-47ad-8d8a-7c2aed015e35",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "ScaleVector2(x=0.05,y=0.05),StickDeadzone",
                    "groups": "",
                    "action": "Mouse0Delta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b0db2ba-bb3d-4c84-8dac-d9afc48caf54",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WheelDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00fb5a26-3240-42a5-812b-5c5bf51251cb",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse0DownPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8fb6920b-436f-4257-8cff-12a62e428cfb",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse0Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}